# ArtHole

./: .gitignore
FastAPI/: .env  alembic.ini  main.py  pyproject.toml
FastAPI/alembic/: env.py
FastAPI/alembic/versions/: 2024_02_02_1308-d26741d6a147_create_table_posts.py  2024_02_02_1329-8529d0c427a2_create_users_table.py
FastAPI/api_v1/: __init__.py
FastAPI/api_v1/posts/: crud.py  dependencies.py  schemas.py  views.py
FastAPI/core/: config.py  database.py
FastAPI/core/models/: __init__.py  post.py  user.py
FastAPI/core/models/shop.py/: adopt.py  commission.py  ych.py
react-frontend/: package-lock.json  package.json
react-frontend/public/: index.css  index.html
react-frontend/src/: App.js
react-frontend/src/components/Navbar/: Navbar.css  Navbar.jsx
react-frontend/src/components/Tagbar/: TagButton.jsx  Tagbar.css  Tagbar.jsx
